Refactor fetch to use URLSearchParams for payload

--- a/index.html
+++ b/index.html
@@ -884,12 +884,9 @@ function submitLead(){
     const payload = { name, email, phone, comments,
                       learnerType, optIn: optIn ? 'Yes' : 'No',
                       timestamp: new Date().toLocaleString() };
-    fetch(SHEET_URL, {
-      method: 'POST',
-      mode: 'no-cors',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify(payload)
-    }).catch(()=>{}); // silent fail — never interrupts the quiz
+   const params = new URLSearchParams(payload);
+fetch(SHEET_URL + '?' + params.toString())
+  .catch(()=>{}); // silent fail — never interrupts the quiz
   }
 }
 
