--- a/index.html
+++ b/index.html
@@ -884,9 +884,10 @@ function submitLead(){
     const payload = { name, email, phone, comments,
                       learnerType, optIn: optIn ? 'Yes' : 'No',
                       timestamp: new Date().toLocaleString() };
-   const params = new URLSearchParams(payload);
-fetch(SHEET_URL + '?' + params.toString())
-  .catch(()=>{}); // silent fail — never interrupts the quiz
+  const esc = encodeURIComponent;
+const query = Object.keys(payload).map(k => esc(k) + '=' + esc(payload[k])).join('&');
+const img = new Image();
+img.src = SHEET_URL + '?' + query; // silent fail — never interrupts the quiz
   }
 }
 
